add demo et fix bugs

--- a/2-oracles/tweeter-oracle/public/index.html
+++ b/2-oracles/tweeter-oracle/public/index.html
@@ -103,11 +103,7 @@
     <p>Is liker ? :<br><pre id="checkIfRetweeterResponse"></pre></p>
     <p>Check if liker Receipt:<br><pre id="checkIfRetweeterReceipt"></pre></p>
 
-    <h2>12. Fetch User Account Address</h2>
-    <p><button id="fetchAccountAddress">Change Account on PTE and Click me</button> to get the account address of the PTE Browser Extension user.</p>
-    <p>Account Address: <pre id="accountAddress"></pre></p>
-    
-    <h2>13.Airdrop Component</h2>
+    <h2>12. Instanciate airdrop component with oracle tweeter component</h2>
     <p>
        accounts to follow (use ; as separator) <input type="text" id="accountsToFollow" />
     </p>
@@ -119,6 +115,11 @@
     </p>
     <p><button id="instantiateAirdropComponent">Instantiate</button></p>
     <p>Airdrop Component Address:<br>       <pre id="airdropComponentAddress"></pre></p>
+
+    <h2>13. Find and store airdrop recipients </h2>
+    
+    <p><button id="findAndStoreAirdropRecipients">Find and store airdrop recipients</button></p>
+    <p>Find and store airdrop recipients:<br> <pre id="findAndStoreAirdropRecipientsReceipt"></pre></p>
 
   </body>
 </html>
