update index and test PTE

--- a/3-lending/LendingDApp/public/index.html
+++ b/3-lending/LendingDApp/public/index.html
@@ -35,6 +35,14 @@
     <h2>3. Instantiate Lending App</h2>
     <p><button id="instantiateComponent">Instantiate</button></p>
     <p>Component Address:<br><pre id="componentAddress"></pre></p>
+    <p>Badge Address:<br><pre id="resourceAddress"></pre></p>
+    <p>Lending NFT:<br><pre id="resourceAddress1"></pre></p>
+    <p>Borrowing NFT:<br><pre id="resourceAddress2"></pre></p>
+    <p>LND Token:<br><pre id="resourceAddress3"></pre></p>
+
+    <h2>3. Register Account</h2>
+    <p><button id="register">Register Account</button></p>
+    <p>Receipt:<br><pre id="result"></pre></p>
 
     <h2>3. Lend Money</h2>
     <p><button id="lendMoney">Lend 100 XRD</button></p>
@@ -42,15 +50,15 @@
 
     <h2>4. Get Money Back</h2>
     <p><button id="getMoney">Get Back 100 XRD plus reward</button></p>
-    <p>Receipt:<br><pre id="receipt"></pre></p>
+    <p>Receipt:<br><pre id="getMoney"></pre></p>
     
     <h2>5. Borrow Money</h2>
     <p><button id="borrowMoney">Borrow 100 XRD</button></p>
-    <p>Receipt:<br><pre id="receipt"></pre></p>
+    <p>Receipt:<br><pre id="borrowMoney"></pre></p>
     
     <h2>6. Repay Money</h2>
     <p><button id="repayMoney">Repay 100 XRD plus fee</button></p>
-    <p>Receipt:<br><pre id="receipt"></pre></p>    
+    <p>Receipt:<br><pre id="repayMoney"></pre></p>    
 
     <h2>7. Check balance</h2>
     <p><button id="checkBalance">Check</button></p>
