Devpost Hackathon Submission for marksean

--- a/3-lending/student-loans/RadEDU Student Loan - Front End/public/index.html
+++ b/3-lending/student-loans/RadEDU Student Loan - Front End/public/index.html
@@ -99,7 +99,7 @@
           <div class="section">
             <h2>Change Borrow Rate</h2>
             <p>In the event of unemployment or disability, we can change the interest rate on the loan.</p>
-            <p>To initiate a deferment and set the interest rate to 0%, click the button below.</p>
+            <p>To initiate a forbearance plan and set the interest rate to 0%, click the button below.</p>
             <p><button id="setBorrow">Claim unemployment/disability</button></p>
             <p><pre id="setBorrowAddress"></pre></p>
           </div>
