--- a/3-lending/degenfi/public/index.html
+++ b/3-lending/degenfi/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-snowpack-app" />
     <link rel="stylesheet" type="text/css" href="/index.css" />
-    <title>Gumball Machine</title>
+    <title>DegenFi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -22,7 +22,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <h1>Gumball Machine</h1>
+    <h1>DegenFi</h1>
 
     <h2>1. Fetch User Account Address</h2>
     <p><button id="fetchAccountAddress">Click me</button> to get the account address of the PTE Browser Extension user.</p>
