--- a/3-lending/demifi/web/public/index.html
+++ b/3-lending/demifi/web/public/index.html
@@ -45,14 +45,14 @@
     <h2>4. Instantiate LoanRequestor</h2>
     <p><button id="instantiateRequestor">Instantiate</button></p>
     <p>Component Address:<br><pre id="requestorComponentAddress"></pre></p>
-    <p>LoanRequest NFT Address:<br><pre id="loanRequestNftAddress"></pre></p>
+    <p>LoanRequest NFT Ressource Address:<br><pre id="loanRequestNftAddress"></pre></p>
     <p>Requestor admin badge Address:<br><pre id="requestorAdminBadgeAddress"></pre></p>
     <p>Requestor config badge Address:<br><pre id="requestorConfigBadgeAddress"></pre></p>
 
     <h2>5. Instantiate LoanAcceptor</h2>
     <p><button id="instantiateAcceptor">Instantiate</button></p>
     <p>Component Address:<br><pre id="acceptorComponentAddress"></pre></p>
-    <p>Loan NFT Address:<br><pre id="loanNftAddress"></pre></p>
+    <p>Loan NFT Resource Address:<br><pre id="loanNftAddress"></pre></p>
 
     <h2>6. Activate LoanRequestor</h2>
     <p><button id="activateAcceptor">Activate</button> <pre id="acceptorActivatedOk"></pre></p>
@@ -60,17 +60,15 @@
     <h2>7. Alice requests a loan</h2>
     <p><button id="requestLoan">Request a loan</button></p>
     <p>LoanRequest NFT id:<br><pre id="loanRequestNfid"></pre></p>
-    <p>But I can't get this transaction manifest to behave and I've
-    run out of time.</p>
-    <p>Is there a limitation of max 10 arguments to a Scrypto function
-    when called from the PTE? I vaguely recall noticing that tuple
-    encode/decode only supports up to 10-element tuples.  The
-    request_loan method has 11 (or 12 if you include self) so that
-    would explain it.</p>
-    <p>The full loan/repayment sequence can be witnessed by running
-    the test suite which runs towards resim and doesn't exhibit this
-    problem. If there is intended to be an argument count limit then I
-    shall need to refactor the request_loan method a little.</p>
+
+    <h2>8. Alice funds her own loan</h2>
+    <p>Clicking around to sign with different accounts got very
+    tedious so we'll have Alice loan herself money. It's silly but
+    it's supported and it demonstrates the functionality.</p>
+    <p><button id="pledgeLoan">Make a pledge</button></p>
+    <pre id="pledgeOk"></pre></p>
+
+    <h2>And then time ran out for the dev.</h2>
 
     <h2>Final error:</h2>
     <p><pre id="errorReturn"></pre></p>
